Arrumando comentários e trechos dispensáveis no código
